RawGit image links

--- a/overleaf-git/slides/overleaf.html
+++ b/overleaf-git/slides/overleaf.html
@@ -28,11 +28,11 @@
         font-weight: bold;
       }
       .editor-example{
-        background-image: url(web-editor.png);
+        background-image: url(https://cdn.rawgit.com/TuorlaObservatory/CompCoffee/67ee6a22/overleaf-git/slides/web-editor.png);
         background-size: 100%, auto;
       }
       .last-slide{
-        background-image: url(final.png);
+        background-image: url(https://cdn.rawgit.com/TuorlaObservatory/CompCoffee/67ee6a22/overleaf-git/slides/final.png);
         background-size: 100%, auto;
       }
     </style>
@@ -51,7 +51,7 @@
 
 
     ---
-    background-image: url(overleaf-slide.png)
+    background-image: url(https://cdn.rawgit.com/TuorlaObservatory/CompCoffee/67ee6a22/overleaf-git/slides/overleaf-slide.png)
 
     <!--
       Second slide
@@ -120,7 +120,7 @@
 
     ---
     
-    background-image: url(overleaf-slide.png)
+    background-image: url(https://cdn.rawgit.com/TuorlaObservatory/CompCoffee/67ee6a22/overleaf-git/slides/overleaf-slide.png)
     <!--
       Third slide
     -->
@@ -172,7 +172,7 @@
 
     ---
     
-    background-image: url(overleaf-slide.png)
+    background-image: url(https://cdn.rawgit.com/TuorlaObservatory/CompCoffee/67ee6a22/overleaf-git/slides/overleaf-slide.png)
     <!--
       Fourth slide
     -->
@@ -197,7 +197,7 @@
 
     - However, recently Overleaf acquired Share`\(\LaTeX\)` and now they are now combining two platforms into one powerful tool
 
-    .center[![Overleaf+ShareLaTeX](ovr-shr.png)]
+    .center[![Overleaf+ShareLaTeX](https://cdn.rawgit.com/TuorlaObservatory/CompCoffee/67ee6a22/overleaf-git/slides/ovr-shr.png)]
 
     ---
 
