Spelling error & PDF

--- a/overleaf-git/slides/overleaf.html
+++ b/overleaf-git/slides/overleaf.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>My Awesome Presentation</title>
+    <title>Overleaf</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <style type="text/css">
     @page {
@@ -195,7 +195,7 @@
 
     --
 
-    - However, recently Overleaf acquired Share`\(\LaTeX\)` and now they are now combining two platforms into one powerful tool
+    - However, recently Overleaf acquired Share`\(\LaTeX\)` and now they are combining two platforms into one powerful tool
 
     .center[![Overleaf+ShareLaTeX](https://cdn.rawgit.com/TuorlaObservatory/CompCoffee/67ee6a22/overleaf-git/slides/ovr-shr.png)]
 
