--- a/code-styles/slides/code-styles.html
+++ b/code-styles/slides/code-styles.html
@@ -292,6 +292,12 @@
         return
     ```
 
+    ---
+
+    class: utu-back, title-slide, center, middle
+
+    # Thank you!
+
     </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js" type="text/javascript">
     </script>
