--- a/programming-styles/slides/programming-styles.html
+++ b/programming-styles/slides/programming-styles.html
@@ -21,39 +21,44 @@
     .remark-slide-content {
         padding-left: 17%;
         padding-right: 17%;
-        }
+    }
    
-     body { font-family: 'Verdana'; }
-     h1, h2, h3 {
+    body { font-family: 'Verdana'; }
+    h1, h2, h3 {
         font-family: 'Open Sans Condensed';
         font-weight: normal;
         text-align: center;
     }
-      .remark-code, .remark-inline-code { font-family: 'monospace'; }
-      .title-slide h1, h2, h3{
+    .remark-code, .remark-inline-code { font-family: 'monospace'; }
+    .title-slide h1, h2, h3{
         font-family: 'Open Sans Condensed', sans-serif;
         font-weight: bold;
-      }
-      .utu-back{
+    }
+    .utu-back{
         background-image: url(background.png);
         background-size: 100%, auto;
-      }
-      .pull-left {
+    }
+    .pull-left {
         padding-left: 0%;
         float: left;
         width: 50%;
-      }
-      .pull-right {
+    }
+    .pull-right {
         padding-right: 0%;
         float: right;
         width: 50%;
-      }
-      .pull-center{
+    }
+    .pull-center{
           float:left;
           padding-left: 20%;
           width: 60%;
-      }
-      
+    }
+
+    .bullets {
+        display: inline-block;
+    }
+    
+   
     </style>
   </head>
   <body>
@@ -152,34 +157,55 @@
 
     # Programming style
 
+  
     --
 
+    .center[
+    .bullets[
     - Naming convention
+    ]]
 
     --
 
+    .center[
+    .bullets[
     - Indentation
+    ]]
 
     --
 
+    .center[
+    .bullets[
     - Vertical alignment
+    ]]
 
     --
 
+    .center[
+    .bullets[
     - Comments
+    ]]
 
     --
 
+    .center[
+    .bullets[
     - Documentation
+    ]]
 
     --
 
+    .center[
+    .bullets[
     - Consistency
+    ]]
 
     --
 
+    .center[
+    .bullets[
     - And refactoring tools
-
+    ]]
 
 
     ---
