Background image from RawGit link

--- a/programming-styles/slides/programming-styles.html
+++ b/programming-styles/slides/programming-styles.html
@@ -35,7 +35,7 @@
         font-weight: bold;
     }
     .utu-back{
-        background-image: url(background.png);
+        background-image: url(https://cdn.rawgit.com/TuorlaObservatory/CompCoffee/e1e2ed26/programming-styles/slides/background.png);
         background-size: 100%, auto;
     }
     .pull-left {
@@ -400,7 +400,7 @@
 
     - [There is even one for `FORTRAN`](http://www.fortran.com/Fortran_Style.pdf)
 
-    
+
     ---
 
     class: utu-back, title-slide, center, middle
