--- a/r/intro/slides.html
+++ b/r/intro/slides.html
@@ -22,7 +22,15 @@
         ---
 
         class: utu-back-content
-        # Normal slide
+        # Waht is `R`?
+
+        As stated in the [manual for beginners](https://cran.r-project.org/doc/manuals/r-release/R-intro.pdf) found at the **C**omprehensive **R** **A**rchive **N**etwork, `R` is
+
+        - An effective data handling and storage facility,
+        - a suite of operators for calculations on arrays, in particular matices
+        - a large, coherent, integrated collectio of intermediate tools for data analysis,
+        - graphical facilities for data analysis and display either directly at the computer or on hard-copy, 
+        - a well developed simple and effective programming language (called ''S'') which includes conditionals, loops, user defined recursive functions and input and output facilities
 
     </textarea>
 
