--- a/r/intro/slides.html
+++ b/r/intro/slides.html
@@ -30,7 +30,17 @@
         - a suite of operators for calculations on arrays, in particular matices
         - a large, coherent, integrated collectio of intermediate tools for data analysis,
         - graphical facilities for data analysis and display either directly at the computer or on hard-copy, 
-        - a well developed simple and effective programming language (called ''S'') which includes conditionals, loops, user defined recursive functions and input and output facilities
+        - a well developed simple and effective programming language (called `S`) which includes conditionals, loops, user defined recursive functions and input and output facilities
+
+        ---
+        
+        class: utu-back-content
+        # What is `R`?
+        - I is **free** and available for all major OS.
+        - `R` is an `interpreted` language.
+        - `R` itself is a rather 'modern' **GNU** implmentation of `S` language,which in turn was developed by *Bell Laboratories*. The first stable beta version was released around 2000.
+        - Part of `R` functions are written in `R` itself and make it easy to understand, part are written in `C`, `FORTRAN` and other languages for the sake of the performance (mostly computational parts). There is a toolchain for building `R \(\leftrightarrow\) C` interoperable libraries.
+        - `R` can be extended through *packages* that can be installed from different centralized repositories (`CRAN`, `MRAN` and mirrors), directly from directories on local machine, from *`git` repos and from many other sources.
 
     </textarea>
 
