--- a/r/intro/slides.html
+++ b/r/intro/slides.html
@@ -42,6 +42,17 @@
         - Part of `R` functions are written in `R` itself and make it easy to understand, part are written in `C`, `FORTRAN` and other languages for the sake of the performance (mostly computational parts). There is a toolchain for building `R \(\leftrightarrow\) C` interoperable libraries.
         - `R` can be extended through *packages* that can be installed from different centralized repositories (`CRAN`, `MRAN` and mirrors), directly from directories on local machine, from *`git` repos and from many other sources.
 
+
+        ---
+
+        class: utu-back-content
+        # Basic concepts
+
+        - There are several base types in `R`, `integer`, `double`, `character` and `logical` among them. It is safe to say that everything in `R` is a first-class object
+        - The simplest collection is a `vector` - a group of objects of the same type. Any standalone primitive object (like number 2.0) is itself a `vector` of size **1**.
+        - Matricies are arrays of higher order (rectangular), lists are general collections of any objects of any types, data frames are data-base like tables with columns of equal length but different type. Another type, part of the `tidyverse` package, `tibble` extends functions of data frames.
+        - Higher order types can be defined using class systems (I am aware of several, `S3`, `S4`, `Reference classes` and `S6`)
+
     </textarea>
 
     <script src="https://rawgit.com/csc-training/slide-template/master/remark/src/remark-0.13.0-min.js">
