--- a/r/intro/slides.html
+++ b/r/intro/slides.html
@@ -139,6 +139,20 @@
         ![:scale 47%](plt_1.jpg)
         ]]
         
+        ---
+
+        class: utu-back-content
+        # Examples: Install `JAGS` and get some packages
+
+        - `JAGS` can be found [here](http://mcmc-jags.sourceforge.net/)
+        - We need `rjags` to run `JAGS` from `R`, `tidyverse` (optional) to use fancy data manipulation facilities.
+
+        ```R
+        > install.packages(c("rjags", "tidyverse")) # Installs two packages
+        > library(rjags)     # Loads rjags, can be used without quotes
+        > library(tidyverse) # All useful data processing tools
+        ```
+        - Now check out code examples (demo)
        
     </textarea>
 
