Added actor as one of the basic types

--- a/r/intro/slides.html
+++ b/r/intro/slides.html
@@ -48,7 +48,7 @@
         class: utu-back-content
         # Basic concepts
 
-        - There are several base types in `R`, `integer`, `double`, `character`, `complex` and `logical` among them. It is safe to say that everything in `R` is a first-class object
+        - There are several base types in `R`, `integer`, `double`, `character`, `complex`, `factor` and `logical`. It is safe to say that everything in `R` is a first-class object
         - The simplest collection is a `vector` - a group of objects of the same type. Any standalone primitive object (like number 2.0) is itself a `vector` of size **1**.
         - Matricies are arrays of higher order (rectangular), lists are general collections of any objects of any types, data frames are data-base like tables with columns of equal length but different type. Another type, part of the `tidyverse` package, `tibble` extends functions of data frames.
         - Higher order types can be defined using class systems (I am aware of several, `S3`, `S4`, `Reference classes` and `S6`)
