Image through RawGit

--- a/r/intro/slides.html
+++ b/r/intro/slides.html
@@ -135,7 +135,7 @@
 
         
         .top[.right[
-        ![:scale 47%](plt_1.jpg)
+        ![:scale 47%](https://cdn.rawgit.com/TuorlaObservatory/CompCoffee/666614bf/r/intro/plt_1.jpg)
         ]]
         
         ---
