Fixed a bunch of typos

--- a/r/intro/slides.html
+++ b/r/intro/slides.html
@@ -21,13 +21,13 @@
         ---
 
         class: utu-back-content
-        # Waht is `R`?
+        # What is `R`?
 
         As stated in the [manual for beginners](https://cran.r-project.org/doc/manuals/r-release/R-intro.pdf) found at the **C**omprehensive **R** **A**rchive **N**etwork, `R` is
 
         - An effective data handling and storage facility,
         - a suite of operators for calculations on arrays, in particular matices
-        - a large, coherent, integrated collectio of intermediate tools for data analysis,
+        - a large, coherent, integrated collection of intermediate tools for data analysis,
         - graphical facilities for data analysis and display either directly at the computer or on hard-copy, 
         - a well developed simple and effective programming language (called `S`) which includes conditionals, loops, user defined recursive functions and input and output facilities
 
@@ -37,7 +37,7 @@
         # What is `R`?
         - It is **free** and available for all major OS.
         - `R` is an `interpreted` language.
-        - `R` itself is a rather 'modern' **GNU** implmentation of `S` language, which in turn was developed by *Bell Laboratories*. The first stable beta version was released around 2000.
+        - `R` itself is a rather 'modern' **GNU** implementation of `S` language, which in turn was developed by *Bell Laboratories*. The first stable beta version was released around 2000.
         - Part of `R` functions are written in `R` itself and make it easy to understand, part are written in `C`, `FORTRAN` and other languages for the sake of the performance (mostly computational parts). There is a toolchain for building `R \(\leftrightarrow\) C` interoperable libraries.
         - `R` can be extended through *packages* that can be installed from different centralized repositories (`CRAN`, `MRAN` and mirrors), directly from directories on local machine, from *`git` repos and from many other sources.
 
@@ -74,7 +74,7 @@
         > a <- 1:7 # Integer range from 1 to 7
         > a ^ 2    # Vectorized power operation
         # [1] 1 4 9 16 25 36 49
-        > mean(a ^ 2) # Calls buil-in stat. mean 
+        > mean(a ^ 2) # Calls built-in stat. mean 
         # [1] 38.5
         > sd (a ^ 2)  # Standard deviation
         # [1] 34.17358
@@ -163,7 +163,7 @@
         ```R
         <- and -> are default operators
         = is used with named func. arguments
-        <<- and ->> are global asignment ops.
+        <<- and ->> are global assignment ops.
         > getwd()  # Returns current working directory
         # [1] "\path\to\current\dir"
         > setwd("\path\to\new\dir") # Sets work dir
